crates/bc-cli/tests/cli/snapshots/cli__transaction__add_leg_quoted_in_its_own_commodity_warns.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created transaction: [TRANSACTION_ID]
----- stderr -----
warning: Expenses:Groceries is quoted in AUD, its own commodity
