crates/bc-cli/tests/cli/snapshots/cli__transaction__add_priced_and_costed_leg_json.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "created_at": "[TIMESTAMP]",
  "date": "2026-03-01",
  "description": "Sell shares",
  "id": "[TRANSACTION_ID]",
  "metadata": [],
  "postings": [
    {
      "account_id": "[ACCOUNT_ID]",
      "amount": {
        "commodity": "AUD",
        "value": "210"
      },
      "cost": null,
      "id": "[POSTING_ID]",
      "metadata": [],
      "price": null,
      "spread_from": null,
      "spread_until": null,
      "tag_ids": []
    },
    {
      "account_id": "[ACCOUNT_ID]",
      "amount": {
        "commodity": "AAPL",
        "value": "-2"
      },
      "cost": {
        "basis": {
          "per_unit": {
            "commodity": "AUD",
            "value": "105"
          }
        },
        "date": "2024-03-01",
        "label": "lot-a"
      },
      "id": "[POSTING_ID]",
      "metadata": [],
      "price": {
        "per_unit": {
          "commodity": "AUD",
          "value": "150"
        }
      },
      "spread_from": null,
      "spread_until": null,
      "tag_ids": []
    }
  ],
  "reconciliation": "reconciled",
  "tag_ids": [],
  "warnings": []
}
----- stderr -----
