crates/bc-cli/tests/cli/snapshots/cli__transaction__add_priced_leg_then_list.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 ID                                     | DATE       | DESCRIPTION     | AMOUNTS              | META
=====================================================================================================
 [TRANSACTION_ID] | 2026-03-01 | Online purchase | 4.00 USD @@ 6.37 AUD |
----- stderr -----
