crates/bc-cli/tests/cli/snapshots/cli__transaction__add_rejects_a_lot_date_without_a_cost.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --posting [ACCOUNT_ID] -2 AAPL: --lot-date and --lot-label need a cost
