crates/bc-cli/tests/cli/snapshots/cli__transaction__add_rejects_a_posting_flag_before_any_posting.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: --cost describes a posting; put it after the posting it belongs to
