crates/bc-cli/tests/cli/snapshots/cli__transaction__add_rejects_lot_selection.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid posting '[ACCOUNT_ID]:-2:AAPL{}': lot selection needs inventory booking, not supported yet (#518)
