crates/bc-cli/tests/cli/snapshots/cli__transaction__add_rejects_negative_price.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: invalid posting '[ACCOUNT_ID]:4.00:USD@@-6.37:AUD': negative price not allowed
