crates/bc-cli/tests/cli/snapshots/cli__transaction__add_transaction.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Created transaction: [TRANSACTION_ID]
----- stderr -----
