crates/bc-cli/tests/cli/snapshots/cli__transaction__add_unbalanced_transaction_fails.snap
---
source: crates/bc-cli/tests/cli/transaction.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: at least two --posting arguments are required
